--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -80,77 +80,72 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div><br>
 
-              <!-- showtimes-->
+              <!--Showtimes-->
               <h2>Showtimes:</h2>
-              <div id="showtimes" class="card-group">
+              <div class="card-deck">
                 <div class="card">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="Kong">
-                        <div class="card-block">
-                          <h4 class="card-title">Kong:Skulll Island</h4>
-                          <p class="card-text">
-                               A team of scientists explore and uncharted island in the Pacific, venture into
-                               the domain of the might Kong, and must fight to escape a primal Eden.
-                          </p><br>
-                            <span class="badge badge-pill badge-info">12:00pm</span>
-                            <span class="badge badge-pill badge-info">1:30pm</span> 
-                            <span class="badge badge-pill badge-info">3:00pm</span> 
-                            <span class="badge badge-pill badge-info">5:30pm</span>
-                            <span class="badge badge-pill badge-info">7:00pm</span>
-                            <span class="badge badge-pill badge-info">9:30pm</span>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last Updated 3 mins ago</small>
-                        </div>
-                    </div>       
+                  <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="kongskullisland" width="318px" height="237px">
+                  <div class="card-body">
+                    <h5 class="card-title">Kong: Skull Island</h5>
+                    <p class="card-text">
+                      A team of scientists explore and uncharted island in the Pacific, venture into
+                      the domain of the might Kong, and must fight to escape a primal Eden.
+                   </p><br><br>
+                    <span class="badge badge-pill badge-info">12:00pm</span>
+                    <span class="badge badge-pill badge-info">1:30pm</span> 
+                    <span class="badge badge-pill badge-info">3:00pm</span> 
+                    <span class="badge badge-pill badge-info">5:30pm</span>
+                    <span class="badge badge-pill badge-info">7:00pm</span>
+                    <span class="badge badge-pill badge-info">9:30pm</span>
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
                 </div>
-            <div class="card">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="ghostintheshell">
-                    <div class="card-block">
-                        <h4 class="card-title">Ghost in the Shell</h4>
-                        <p class="card-text">
-                            In the near future, Major Mila Killian is the first of her kind: a human
-                            saved from a terrible crash, who is cyber-enhanced to be a perfect soldier
-                            devoted to stopping the world's most dangerous criminals. 
-                        </p>
-                        <span class="badge badge-pill badge-info">12:00pm</span>
-                        <span class="badge badge-pill badge-info">1:30pm</span> 
-                        <span class="badge badge-pill badge-info">3:00pm</span> 
-                        <span class="badge badge-pill badge-info">5:30pm</span>
-                        <span class="badge badge-pill badge-info">7:00pm</span>
-                        <span class="badge badge-pill badge-info">9:30pm</span>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last Updated 3 mins ago</small>
-                    </div>
+                <div class="card">
+                  <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Ghost" width="318px" height="237px">
+                  <div class="card-body">
+                    <h5 class="card-title">Ghost in the Shell</h5>
+                    <p class="card-text">
+                      In the near future, Major Mila Killian is the first of her kind: a human
+                      saved from a terrible crash, who is cyber-enhanced to be a perfect soldier
+                      devoted to stopping the world's most dangerous criminals. 
+                  </p><br>
+                    <span class="badge badge-pill badge-info">12:00pm</span>
+                    <span class="badge badge-pill badge-info">1:30pm</span> 
+                    <span class="badge badge-pill badge-info">3:00pm</span> 
+                    <span class="badge badge-pill badge-info">5:30pm</span>
+                    <span class="badge badge-pill badge-info">7:00pm</span>
+                    <span class="badge badge-pill badge-info">9:30pm</span>
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
                 </div>
-            </div>
-            <div class="card">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="beautyandthebeast">
-                        <div class="card-block">
-                          <h4 class="card-title">Beauty and the Beast</h4>
-                          <p class="card-text">
-                            A selfish prince is cursed to become a monster for the rest of his life, 
-                            unless he learns to fall in love with a woman he keeps as prisoner.  
-                           </p><br><br>
-                            <span class="badge badge-pill badge-info">12:00pm</span>
-                            <span class="badge badge-pill badge-info">1:30pm</span> 
-                            <span class="badge badge-pill badge-info">3:00pm</span> 
-                            <span class="badge badge-pill badge-info">5:30pm</span>
-                            <span class="badge badge-pill badge-info">7:00pm</span>
-                            <span class="badge badge-pill badge-info">9:30pm</span>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last Updated 3 mins ago</small>
-                        </div>
-                    </div>
+                <div class="card">
+                  <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="BeautyBeast" width="318px" height="237px">
+                  <div class="card-body">
+                    <h5 class="card-title">Beauty and the Beast</h5>
+                    <p class="card-text">
+                      A selfish prince is cursed to become a monster for the rest of his life, 
+                      unless he learns to fall in love with a woman he keeps as prisoner.  
+                     </p><br><br>
+                      <span class="badge badge-pill badge-info">12:00pm</span>
+                      <span class="badge badge-pill badge-info">1:30pm</span> 
+                      <span class="badge badge-pill badge-info">3:00pm</span> 
+                      <span class="badge badge-pill badge-info">5:30pm</span>
+                      <span class="badge badge-pill badge-info">7:00pm</span>
+                      <span class="badge badge-pill badge-info">9:30pm</span>
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
                 </div>
-                 
-
               </div>
 
               <!-- deals -->
