--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -10,6 +10,7 @@
 
     <title>Academy Cinemas</title>
   </head>
+  
   <body>
 
         <div class="container">
@@ -69,13 +70,13 @@
                     <h3>Now Playing</h3>
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <a class="nav-link" href="#">Kong: Skull Island</a>
+                            <a class="nav-link" href="#kong">Kong: Skull Island</a>
                         </li>
                         <li class="list-group-item">
-                            <a class="nav-link" href="#">Ghost in the Shell</a>
+                            <a class="nav-link" href="#ghost">Ghost in the Shell</a>
                         </li>
                         <li class="list-group-item">
-                            <a class="nav-link" href="#">Beauty and the Beast</a>
+                            <a class="nav-link" href="#beauty">Beauty and the Beast</a>
                         </li>
                     </ul>
                   </div>
@@ -86,7 +87,7 @@
               <h2>Showtimes:</h2>
               <div class="card-deck">
                 <div class="card">
-                  <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="kongskullisland" width="318px" height="237px">
+                  <img class="card-img-top" id="kong" src="./Img/kongskullisland.jpg" alt="kongskullisland" width="318px" height="237px">
                   <div class="card-body">
                     <h5 class="card-title">Kong: Skull Island</h5>
                     <p class="card-text">
@@ -106,7 +107,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Ghost" width="318px" height="237px">
+                  <img class="card-img-top" id="ghost" src="./Img/ghostintheshell.jpg" alt="Ghost" width="318px" height="237px">
                   <div class="card-body">
                     <h5 class="card-title">Ghost in the Shell</h5>
                     <p class="card-text">
@@ -127,7 +128,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="BeautyBeast" width="318px" height="237px">
+                  <img class="card-img-top" id="beauty" src="./Img/beautyandthebeast.jpg" alt="BeautyBeast" width="318px" height="237px">
                   <div class="card-body">
                     <h5 class="card-title">Beauty and the Beast</h5>
                     <p class="card-text">
@@ -148,6 +149,18 @@
                 </div>
               </div>
 
+              <!-- jumbotron-->
+              <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+                <div class="container">
+                  <h1 class="display-4 hidden-sm-down" style="color: #fff;font-family: roboto;font-weight: 900;text-transform: uppercase;">
+                  Movie Deals</h1>
+                  <p class="lead">Check out our monthly deals...</p>
+                  <!--movie deals-->
+                    <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthy movie deals!</button>
+                </div>
+
+              </div>
+
               <!-- deals -->
 
               <div id="deals" class="text-center">
@@ -156,7 +169,9 @@
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-primary popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Sumbit your email to receive great movie rewards!">
+                          Sign Up
+                        </button>
                     </form>
               </div>
 
@@ -176,7 +191,47 @@
                     </li>
                 </ul>
             </div>
+            
 
+
+            <!--Form Modal -->
+            <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Register to receive movie deals</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    
+                    <form>
+                      <fieldset class="form-group">
+                        <label for="firstname">First Name</label>
+                        <input type="text" class="form-control" id="firstname" placeholder="First Name...">
+                      </fieldset>
+                      <fieldset class="form-group">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" placeholder="Last Name...">
+                      </fieldset>
+                      <fieldset class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email" placeholder="Email...">
+                      </fieldset>
+                      <fieldset class="form-group">
+                        <label for="password">Password</label>
+                        <input type="text" class="form-control" id="password" placeholder="Password...">
+                      </fieldset>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 
         </div>
@@ -185,5 +240,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+      $('.popover-dismiss').popover({
+        trigger: 'focus'
+      })
+    </script>
   </body>
 </html>
